--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://a0g7vblpzmwcfsff4ilm:pscale_pw_X8BbWIWjEfzfLpWWRgRvfRWAeOtb3LYpEOKwTi4P3q4@aws.connect.psdb.cloud/sapelka-salon?sslaccept=strict'
+DATABASE_URL='mysql://nl8e95wpp960smxcgg6a:pscale_pw_RUetdz7gCoqrReICqK5d9cnMHBCF0OFnUgYUdQHNhRc@aws.connect.psdb.cloud/sapelka-salon?sslaccept=strict'
 
 NEXTAUTH_SECRET =BDAvVN8CP/Sjdw8lis7HEXvo2ZgxAiYykb7XQRffZOM=
